--- a/Web/webapp/web.xml
+++ b/Web/webapp/web.xml
@@ -4,6 +4,11 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+ 
+ <context-param>
+    <param-name>appName</param-name>
+    <param-value>Start page</param-value>
+  </context-param>
 
   <filter>
     <filter-name>AuthFilter</filter-name>
