--- a/Web/webapp/web.xml
+++ b/Web/webapp/web.xml
@@ -39,6 +39,11 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+ 
+ <error-page>
+    <error-code>401</error-code>
+    <location>errors/error401.jsp</location>
+  </error-page>
 
 </web-app>
 
